@startuml Reservation system

title
Reservation system
end title

class Seat {
    +Seat(char symbol, unsigned int id, std::shared_ptr<Person> owner) noexcept
    +Seat(char symbol, unsigned int id) noexcept
    +{abstract}virtual ~Seat() = default;

    +char getSymbol() const noexcept
    +unsigned int getID() const noexcept
    +std::shared_ptr<Person> getOwner() const noexcept
    +bool isTaken() const noexcept
    +{abstract}virtual constexpr unsigned int getPrice() const noexcept

    +void take(std::shared_ptr<Person> newOwner) noexcept
    +void free() noexcept

    #const char symbol_
    #const unsigned int id_
    #std::shared_ptr<Person> owner_
}

class StandardSeat {
    +StandardSeat(unsigned int id, std::shared_ptr<Person> owner) noexcept
    +StandardSeat(unsigned int id) noexcept

    +constexpr unsigned int getPrice() const noexcept override
}

class VIPSeat {
    +VIPSeat(unsigned int id, std::shared_ptr<Person> owner) noexcept
    +VIPSeat(unsigned int id) noexcept

    +constexpr unsigned int getPrice() const noexcept override
}

class DisabledSeat {
    +DisabledSeat(unsigned int id, std::shared_ptr<Person> owner) noexcept
    +DisabledSeat(unsigned int id) noexcept

    +constexpr unsigned int getPrice() const noexcept override
}

class Person {
    +Person(const std::string& name, const std::string& surname, const std::string& phoneNum, const std::string& email, const std::string& pesel)
    +Person(const std::string& name, const std::string& surname, const std::string& phoneNum, const std::string& email, const std::string& pesel, bool isVaccinated)

    +std::string getName() const
    +std::string getSurname() const
    +std::string getPhoneNum() const
    +std::string getEmail() const
    +std::string getPesel() const

    +unsigned int getAge() const noexcept

    +bool isVaccinated_

    -std::string name_
    -std::string surname_
    -std::string phoneNum_
    -std::string email_
    -std::string pesel_
}

Seat <|-- StandardSeat
Seat <|-- VIPSeat
Seat <|-- DisabledSeat

Seat o-- Person

@enduml
